PIRATE-4465, fix logo position for Firefox on mobile preview

--- a/less/header-style.less
+++ b/less/header-style.less
@@ -404,6 +404,7 @@
         }
         @media only screen and (max-width : 600px) {
             position: relative;
+            top: 0;
         }
     }
     .company-link {
